--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <flyway.version>4.0.3</flyway.version>
     </properties>
 
 <!-- code_snippet gsg-spring-s3 start -->
@@ -29,10 +30,12 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>${flyway.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,16 +50,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-    </dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+</dependency>
     </dependencies>
-
 <!-- code_snippet gsg-spring-s3 end -->
 
     <build>
@@ -70,12 +67,9 @@
               <artifactId>flyway-maven-plugin</artifactId>
               <version>4.0.3</version>
               <configuration>
-                <url>jdbc:mysql://localhost</url>
+                <url>jdbc:mysql://localhost:3306/salon</url>
                 <user>root</user>
                 <password>root</password>
-                <schemas>
-                    <schema>salon</schema>
-                </schemas>
               </configuration>
           </plugin>
         </plugins>
